# FAURSA-Project

./: .gitmodules  LICENSE  README.md  first_setup.sh  setup.sh
documentation/html/: Installation de ROS.html  Wiki projet FAURSA.html
documentation/markdown/: Installation de ROS.md  Wiki projet FAURSA.md
ros_workspace/src/wheelchair/: CMakeLists.txt  package.xml
ros_workspace/src/wheelchair/launch/: wheelchair.launch  wheelchair_base.launch
ros_workspace/src/wheelchair/meshes/: wheelchair_base_seat.dae
ros_workspace/src/wheelchair/scripts/: reading_laser.py
ros_workspace/src/wheelchair/urdf/: base.urdf.xacro  wheelchair.gazebo.xacro  wheelchair.hokuyo.xacro  wheelchair.urdf.xacro
ros_ws/src/motion_planning/: CMakeLists.txt  package.xml
ros_ws/src/motion_planning/scripts/: obstacle_avoidance_with_map.py
ros_ws/src/motion_planning/scripts/archive/: obstacle_avoidance_with_laser.py  reading_map_info.py  update_goal.py
ros_ws/src/motion_planning/src/: iss.cpp  optimisation_local.cpp  sub_pub.cpp  trajectory_gen.cpp
ros_ws/src/motion_planning/src/archive/: simple_navigation.cpp
simulation_ws/src/wheelchair/: CMakeLists.txt  package.xml
simulation_ws/src/wheelchair/config/: wheelchair_map.rviz  wheelchair_nomap.rviz
simulation_ws/src/wheelchair/launch/: wheelchair.launch  wheelchair_base_gmapping.launch  wheelchair_base_saved_map.launch  wheelchair_model.launch
simulation_ws/src/wheelchair/launch/mapping_modes/: gmapping.launch  hector_mapping.launch  lama_mapping.launch  saved_map.launch
simulation_ws/src/wheelchair/map/: hexagon.pgm  hexagon.yaml  simple_house.pgm  simple_house.yaml  simple_maze.pgm  simple_maze.yaml
simulation_ws/src/wheelchair/meshes/: scrubs.dae
simulation_ws/src/wheelchair/urdf/: base.urdf.xacro  wheelchair.constants.xacro  wheelchair.gazebo.xacro  wheelchair.hokuyo.xacro
simulation_ws/src/wheelchair/worlds/: empty.world  hexagon.world  simple_house.world  simple_maze.world
