<?xml version="1.0"?>
<package>
  <name>motion_planning</name>
  <version>1.2.4</version>
  <description>
    This package provides motion planning tools for autonomous vehicles (diff drive)
  </description>
  <maintainer email="moncef.boukhecheba@gmail.com">Moncef Boukhecheba</maintainer>
  <license>MIT</license>

  <author>Moncef Boukhecheba</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
</package>
